--- a/Css and Assests/style.css
+++ b/Css and Assests/style.css
@@ -3,10 +3,10 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%; */
 	font-family: Arial, sans-serif;
-	background-color: #85294f;
+	background-color: rgb(255, 255, 255);
 	
 }
-h1 {
-	color: aliceblue;
+main{
+	color: black;
+	font-style: oblique;
 }
-
